--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ typeEffect();
 <!-- services section -->
 <section id="services" class="services-section">
   <div class="container">
-    <h2 class="section-title">Nos services</h2>
+    <h2 class="section-title" id="services-title">Nos services</h2>
 
     <div class="timeline">
       <div class="timeline-dot">
@@ -230,44 +230,43 @@ typeEffect();
 
       <div class="timeline-item left hidden">
         <div class="card">
-        <img src="CustomizedAcademicPrograms.jpg" alt="">
-        <div class="content">
-          <h3>Programmes académiques personnalisés</h3>
-          <p>Des programmes d’apprentissage sur mesure conçus pour répondre aux besoins de chaque apprenant.</p>
-        </div>
+          <img src="CustomizedAcademicPrograms.jpg" alt="">
+          <div class="content">
+            <h3 id="service1-title">Programmes académiques personnalisés</h3>
+            <p id="service1-text">Des programmes d’apprentissage sur mesure conçus pour répondre aux besoins de chaque apprenant.</p>
+          </div>
         </div>
       </div>
 
       <div class="timeline-item right hidden">
          <div class="card">
-        <img src="ExpertTrainers.jpg" alt="">
-        <div class="content">
-          <h3>Formateurs experts</h3>
-          <p>Des instructeurs certifiés disposant d’une solide expérience académique et pratique.</p>
-        </div>
+          <img src="ExpertTrainers.jpg" alt="">
+          <div class="content">
+            <h3 id="service2-title">Formateurs experts</h3>
+            <p id="service2-text">Des instructeurs certifiés disposant d’une solide expérience académique et pratique.</p>
+          </div>
         </div>
       </div>
 
       <div class="timeline-item left hidden">
         <div class="card">
-        <img src="beuro.jpg" alt="">
-        <div class="content">
-          <h3>Installations modernes</h3>
-          <p>Des salles de classe interactives équipées d’outils pédagogiques modernes.</p>
-        </div>
+          <img src="beuro.jpg" alt="">
+          <div class="content">
+            <h3 id="service3-title">Installations modernes</h3>
+            <p id="service3-text">Des salles de classe interactives équipées d’outils pédagogiques modernes.</p>
+          </div>
         </div>
       </div>
 
       <div class="timeline-item right hidden">
         <div class="card">
-        <img src="Diversespecializations.jpg" alt="">
-        <div class="content">
-          <h3>Spécialisations diversifiées</h3>
-          <p>Nous offrons des opportunités de formation et de développement des compétences dans plusieurs domaines, en adéquation avec les exigences de l’avenir.</p>
-        </div>
+          <img src="Diversespecializations.jpg" alt="">
+          <div class="content">
+            <h3 id="service4-title">Spécialisations diversifiées</h3>
+            <p id="service4-text">Nous offrons des opportunités de formation et de développement des compétences dans plusieurs domaines, en adéquation avec les exigences de l’avenir.</p>
+          </div>
         </div>
       </div>
-
     </div>
   </div>
 </section>
@@ -367,4 +366,5 @@ window.addEventListener('scroll', () => {
 
 </body>
 </html>
+
 
